--- a/midland-bs-mannager/src/main/resources/properties/application.properties
+++ b/midland-bs-mannager/src/main/resources/properties/application.properties
@@ -1,7 +1,7 @@
 ﻿﻿﻿﻿﻿##JDBC Global Setting
 jdbc.driver=com.mysql.jdbc.Driver
 
-jdbc.url=jdbc:mysql://10.58.189.11:3306/midland?useUnicode=true&characterEncoding=utf-8&allowMultiQueries=true
+jdbc.url=jdbc:mysql://175.102.18.14:3306/midland?useUnicode=true&characterEncoding=utf-8&allowMultiQueries=true
 jdbc.username=root
 jdbc.password=root
 
@@ -34,7 +34,8 @@ redis.pool.testOnBorrow=true
 
 
 
-redis.host=175.102.18.14
+#redis.host=175.102.18.14
+redis.host=10.58.189.11
 redis.port=6379
 
 
