项目配置调整

--- a/midland-web-portal/src/main/webapp/WEB-INF/web.xml
+++ b/midland-web-portal/src/main/webapp/WEB-INF/web.xml
@@ -39,7 +39,7 @@
     </session-config> 
 	<filter>
 		<filter-name>sessionFilter</filter-name>
-		<filter-class>com.huixin.wks.web.filter.GetContextFilter</filter-class>
+		<filter-class>com.bluemobi.midland.web.filter.GetContextFilter</filter-class>
 	</filter>
  
 	<filter-mapping>
