--- a/midland-bs-mannager/src/main/resources/properties/application.properties
+++ b/midland-bs-mannager/src/main/resources/properties/application.properties
@@ -3,7 +3,7 @@ jdbc.driver=com.mysql.jdbc.Driver
 
 jdbc.url=jdbc:mysql://175.102.18.14:3306/midland?useUnicode=true&characterEncoding=utf-8&allowMultiQueries=true
 jdbc.username=root
-jdbc.password=root
+jdbc.password=123456
 
 
 #jdbc.url=jdbc:mysql://des.oa.com:3306/midland?useUnicode=true&characterEncoding=utf-8&allowMultiQueries=true
