--- a/midland-bs-mannager/src/main/resources/properties/application.properties
+++ b/midland-bs-mannager/src/main/resources/properties/application.properties
@@ -36,7 +36,7 @@ redis.pool.testOnBorrow=true
 
 # redis.host=175.102.18.14
 #redis.host=192.168.149.133
-redis.host=175.102.18.14
+redis.host=localhost
 redis.port=6379
 
 
