--- a/midland-bs-mannager/src/main/resources/properties/appsetting.properties
+++ b/midland-bs-mannager/src/main/resources/properties/appsetting.properties
@@ -26,12 +26,15 @@ upload_dir=/home/project/upload/
 
 #短信发送参数
 
-url=325dsfdsf
-bizAppId=2
-customerId=3
-userId=4
+url=http://open.bizapp.com/api/sms/templateSend
+bizAppId=F0000034
+customerId=C1011562
+userId=U1014675
 webKey=5
 sessionId=6
 type=7
 charset=GBK
+password=kejiang123
+
+
 
