--- a/midland-bs-mannager/src/main/resources/properties/application.properties
+++ b/midland-bs-mannager/src/main/resources/properties/application.properties
@@ -35,8 +35,8 @@ redis.pool.testOnBorrow=true
 
 
 # redis.host=10.58.189.11
-#redis.host=192.168.149.133
-redis.host=175.102.18.14
+redis.host=localhost
+#redis.host=175.102.18.14
 redis.port=6379
 
 
