--- a/pom.xml
+++ b/pom.xml
@@ -22,7 +22,7 @@
         <pluginRepository>
             <id>nexus</id>
             <name>nexus</name>
-            <url>http://nexus.oa.irissz.com:8081/nexus/content/groups/public</url>
+            <url>http://mvnrepository.com/tags/maven</url>
             <releases>
                 <enabled>true</enabled>
             </releases>
@@ -35,7 +35,7 @@
         <repository>
             <id>nexus</id>
             <name>local private nexus</name>
-            <url>http://nexus.oa.irissz.com:8081/nexus/content/groups/public</url>
+            <url>http://mvnrepository.com/tags/maven</url>
             <releases>
                 <enabled>true</enabled>
             </releases>
