--- a/midland-web-portal/src/main/webapp/WEB-INF/web.xml
+++ b/midland-web-portal/src/main/webapp/WEB-INF/web.xml
@@ -10,7 +10,7 @@
 	</listener>
 	<context-param>
 		<param-name>contextConfigLocation</param-name>
-		<param-value>classpath:applicationContext.xml</param-value>
+		<param-value>classpath:spring/applicationContext.xml</param-value>
 	</context-param>
 
 	<context-param>
@@ -50,7 +50,7 @@
 			<!--2、<param-value>/WEB-INF/classes/dispatcher-servlet.xml</param-value>-->
 			<!--3、<param-value>classpath*:dispatcher-servlet.xml</param-value>-->
 			<!--4、多个值用逗号分隔-->
-			<param-value>classpath:applicationContext.xml</param-value>
+			<param-value>classpath:spring/applicationContext.xml</param-value>
 		</init-param>
 		<load-on-startup>1</load-on-startup><!--是启动顺序，让这个Servlet随Servletp容器一起启动。-->
 	</servlet>
