--- a/midland-bs-mannager/pom.xml
+++ b/midland-bs-mannager/pom.xml
@@ -22,5 +22,10 @@
             <artifactId>ant</artifactId>
             <version>1.6.5</version>
         </dependency>
+        <dependency>
+            <groupId>org.apache.tomcat</groupId>
+            <artifactId>tomcat-servlet-api</artifactId>
+            <version>RELEASE</version>
+        </dependency>
     </dependencies>
 </project>
