--- a/midland-service/pom.xml
+++ b/midland-service/pom.xml
@@ -160,6 +160,13 @@
     </properties>
 
     <dependencies>
+
+        <dependency>
+            <groupId>com.github.qcloudsms</groupId>
+            <artifactId>sms</artifactId>
+            <version>0.9.2</version>
+        </dependency>
+
         <!-- https://mvnrepository.com/artifact/javax.mail/mail -->
         <dependency>
             <groupId>javax.mail</groupId>
