--- a/midland-web-portal/pom.xml
+++ b/midland-web-portal/pom.xml
@@ -2,21 +2,33 @@
 <project
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd"
 	xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
+
 	<modelVersion>4.0.0</modelVersion>
+	<groupId>com.bluemobi</groupId>
+	<artifactId>midland-web-portal</artifactId>
+	<packaging>war</packaging>
+	<version>1.0.0</version>
+	<name>midland-web-portal App</name>
 	<parent>
 		<groupId>com.bluemobi</groupId>
 		<artifactId>midland-parent</artifactId>
 		<version>1.1.0</version>
 	</parent>
-	<artifactId>midland-web-portal</artifactId>
-	<packaging>war</packaging>
-	<name>midland-web-portal Maven Webapp</name>
-
 	<dependencies>
 		<dependency>
 			<groupId>com.bluemobi</groupId>
 			<artifactId>midland-service</artifactId>
 			<version>1.1.0</version>
 		</dependency>
-    </dependencies>
+		<dependency>
+			<groupId>ant</groupId>
+			<artifactId>ant</artifactId>
+			<version>1.6.5</version>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.tomcat</groupId>
+			<artifactId>tomcat-servlet-api</artifactId>
+			<version>RELEASE</version>
+		</dependency>
+	</dependencies>
 </project>
