--- a/pom.xml
+++ b/pom.xml
@@ -22,7 +22,7 @@
         <pluginRepository>
             <id>nexus</id>
             <name>nexus</name>
-            <url>http://mvnrepository.com/tags/maven</url>
+            <url>http://mvnrepository.com/</url>
             <releases>
                 <enabled>true</enabled>
             </releases>
@@ -35,7 +35,7 @@
         <repository>
             <id>nexus</id>
             <name>local private nexus</name>
-            <url>http://mvnrepository.com/tags/maven</url>
+            <url>http://mvnrepository.com/</url>
             <releases>
                 <enabled>true</enabled>
             </releases>
@@ -45,7 +45,6 @@
         </repository>
     </repositories>
     <build>
-        <finalName>midland</finalName>
         <plugins>
             <plugin>
                 <!--指定Maven的版本，并且指定Maven使用的jdk版本-->
