--- a/midland-web-portal/src/main/resources/properties/application.properties
+++ b/midland-web-portal/src/main/resources/properties/application.properties
@@ -1,7 +1,7 @@
 ﻿﻿﻿﻿# JDBC Global Setting
 jdbc.driver=com.mysql.jdbc.Driver
 
-jdbc.url=jdbc:mysql://localhost:3306/midland?useUnicode=true&characterEncoding=utf-8&allowMultiQueries=true
+jdbc.url=jdbc:mysql://43.254.55.177:3306/midland?useUnicode=true&characterEncoding=utf-8&allowMultiQueries=true
 jdbc.username=root
 jdbc.password=123456
 
