--- a/midland-bs-mannager/src/main/resources/properties/application.properties
+++ b/midland-bs-mannager/src/main/resources/properties/application.properties
@@ -1,14 +1,14 @@
 ﻿﻿﻿﻿# JDBC Global Setting
 jdbc.driver=com.mysql.jdbc.Driver
 
-#jdbc.url=jdbc:mysql://10.58.189.10:3306/midland?useUnicode=true&characterEncoding=utf-8&allowMultiQueries=true
-#jdbc.username=root
-#jdbc.password=root
-
-
-jdbc.url=jdbc:mysql://43.254.55.177:3306/midland?useUnicode=true&characterEncoding=utf-8&allowMultiQueries=true
+jdbc.url=jdbc:mysql://10.58.189.10:3306/midland?useUnicode=true&characterEncoding=utf-8&allowMultiQueries=true
 jdbc.username=root
-jdbc.password=123456
+jdbc.password=root
+
+
+#jdbc.url=jdbc:mysql://43.254.55.177:3306/midland?useUnicode=true&characterEncoding=utf-8&allowMultiQueries=true
+#jdbc.username=root
+#jdbc.password=123456
 
 #jdbc.url=jdbc:mysql://localhost:3306/midland?useUnicode=true&characterEncoding=utf-8&allowMultiQueries=true
 #jdbc.username=root
