--- a/midland-bs-mannager/src/main/resources/properties/midland.properties
+++ b/midland-bs-mannager/src/main/resources/properties/midland.properties
@@ -14,3 +14,24 @@ areaUrl = http://218.18.9.171:8183/dingjian/website/api/area/list?dataCenter=dat
 agentPage=http://218.18.9.171:8183/dingjian/website/api/agenter/list?dataCenter=dataSource_szml
 agentLogin=http://218.18.9.171:8183/dingjian/website/api/agenter/login
 agentDetail=http://218.18.9.171:8183/dingjian/website/api/agenter/detail
+
+
+
+
+
+
+
+//房源类接口
+//新房0
+newhouse=http://218.18.9.171:8183/dingjian/website/api/newHouse/detail?dataCenter=dataSource_szml
+//二手房1
+second=http://218.18.9.171:8183/dingjian/website/api/secondHouse/sale/detail?dataCenter=dataSource_szml
+
+//2租房
+rent=http://218.18.9.171:8183/dingjian/website/api/secondHouse/rent/detail?dataCenter=dataSource_szml
+//3写字楼
+work=http://218.18.9.171:8183/dingjian/website/api/office/detail?dataCenter=dataSource_XXX
+//4商铺
+shop=http://218.18.9.171:8183/dingjian/website/api/shop/detail?dataCenter=dataSource_szml
+//5其它
+other=
