--- a/midland-web-portal/src/main/resources/properties/application.properties
+++ b/midland-web-portal/src/main/resources/properties/application.properties
@@ -1,14 +1,14 @@
 ﻿﻿﻿﻿# JDBC Global Setting
-jdbc.driver=com.mysql.jdbc.Driver
 
+redis.host=localhost
+redis.port=6379
+
+
+jdbc.driver=com.mysql.jdbc.Driver
 jdbc.url=jdbc:mysql://43.254.55.177:3306/midland?useUnicode=true&characterEncoding=utf-8&allowMultiQueries=true
 jdbc.username=root
-jdbc.password=123456
+jdbc.password=z-9a]e9W1TAk2!)z
 
-
-#jdbc.url=jdbc:mysql://10.58.189.10:3306/midland?useUnicode=true&characterEncoding=utf-8&allowMultiQueries=true
-#jdbc.username=root
-#jdbc.password=root
 
 
 ##DataSource Global Setting
@@ -34,17 +34,10 @@ redis.pool.testOnBorrow=true
 
 
 
-# redis.host=10.58.189.11
-redis.host=localhost
-#redis.host=175.102.18.14
-redis.port=6379
 
 
-#redis.host=redis.oa.com
-#redis.port=6379
 
 
 
 #文件上传相对路径
 upload_dir=/home/project/upload
-timeout_url=http://localhost/login.html
