--- a/midland-web-portal/src/main/resources/properties/midland.properties
+++ b/midland-web-portal/src/main/resources/properties/midland.properties
@@ -1,9 +1,7 @@
+#后台登录地址
 loginUrl=http://43.254.55.177:8083/midland/rest/page/login
-#loginurl=http://120.76.24.30:90/login.html
 #获取省市取接口
-
 webSite
-
 apiUrl = http://218.18.9.171:9009/dingjian/website/api/city/list?dataCenter=dataSource_szml&pageSize=2147483647
 areaUrl = http://218.18.9.171:9009/dingjian/website/api/area/list?dataCenter=dataSource_szml
 //经纪人列表接口
