--- a/midland-bs-mannager/src/main/resources/properties/midland.properties
+++ b/midland-bs-mannager/src/main/resources/properties/midland.properties
@@ -2,11 +2,9 @@
 webSite=http://43.254.55.177:8083
 
 
-
+#后台登录地址,可不配置
 loginUrl=http://43.254.55.177:8083/midland/rest/page/login
-#loginurl=http://120.76.24.30:90/login.html
 #获取省市取接口
-
 
 apiUrl = http://218.18.9.171:9009/dingjian/website/api/city/list?dataCenter=dataSource_szml&pageSize=2147483647
 areaUrl = http://218.18.9.171:9009/dingjian/website/api/area/list?dataCenter=dataSource_szml
@@ -21,17 +19,17 @@ agentDetail=http://218.18.9.171:9009/dingjian/website/api/agenter/detail
 
 
 
-//房源类接口
-//新房0
-newhouse=http://218.18.9.171:9009/dingjian/website/api/newHouse/detail?dataCenter=dataSource_szml
-//二手房1
-second=http://218.18.9.171:9009/dingjian/website/api/secondHouse/sale/detail?dataCenter=dataSource_szml
-
-//2租房
-rent=http://218.18.9.171:9009/dingjian/website/api/secondHouse/rent/detail?dataCenter=dataSource_szml
-//3写字楼
-work=http://218.18.9.171:9009/dingjian/website/api/office/detail?dataCenter=dataSource_XXX
-//4商铺
-shop=http://218.18.9.171:9009/dingjian/website/api/shop/detail?dataCenter=dataSource_szml
-//5其它
-other=
+#//房源类接口
+#//新房0
+#newhouse=http://218.18.9.171:9009/dingjian/website/api/newHouse/detail?dataCenter=dataSource_szml
+#//二手房1
+#second=http://218.18.9.171:9009/dingjian/website/api/secondHouse/sale/detail?dataCenter=dataSource_szml
+#
+#//2租房
+#rent=http://218.18.9.171:9009/dingjian/website/api/secondHouse/rent/detail?dataCenter=dataSource_szml
+#//3写字楼
+#work=http://218.18.9.171:9009/dingjian/website/api/office/detail?dataCenter=dataSource_XXX
+#//4商铺
+#shop=http://218.18.9.171:9009/dingjian/website/api/shop/detail?dataCenter=dataSource_szml
+#//5其它
+#other=
