--- a/midland-bs-mannager/src/main/resources/properties/application.properties
+++ b/midland-bs-mannager/src/main/resources/properties/application.properties
@@ -2,6 +2,7 @@
 #redis配置
 redis.host=localhost
 redis.port=6379
+redis.pass=
 #mysql配置
 jdbc.driver=com.mysql.jdbc.Driver
 jdbc.url=jdbc:mysql://43.254.55.177:3306/midland?useUnicode=true&characterEncoding=utf-8&allowMultiQueries=true
