--- a/midland-bs-mannager/src/main/resources/properties/appsetting.properties
+++ b/midland-bs-mannager/src/main/resources/properties/appsetting.properties
@@ -4,11 +4,17 @@
 imgdomain=http://43.254.55.177:8083/img/
 
 #注意事项 nginx要加 /img/ueditor的配置,如下
+#nginx 的端口对接 imgdomain 的端口
+
 #     location /img/ueditor {
 #        alias  /home/project/upload/ueditor;
 #        # error_page 405 =200 $1;
 #     }
 
+#      location /home {
+#         alias  /home;
+         # error_page 405 =200 $1;
+#     }
 
 
 
