--- a/midland-web-portal/src/main/resources/properties/application.properties
+++ b/midland-web-portal/src/main/resources/properties/application.properties
@@ -2,7 +2,7 @@
 
 redis.host=localhost
 redis.port=6379
-
+redis.pass=
 
 jdbc.driver=com.mysql.jdbc.Driver
 jdbc.url=jdbc:mysql://43.254.55.177:3306/midland?useUnicode=true&characterEncoding=utf-8&allowMultiQueries=true
