--- a/midland-web-portal/src/main/resources/properties/midland.properties
+++ b/midland-web-portal/src/main/resources/properties/midland.properties
@@ -1,7 +1,12 @@
-#后台登录地址
+
+#前端网站地址配置(第三方登录验证成功后,后台跳转到前端登录页面)
+webSite=http://43.254.55.177:8083
+
+
+#后台登录地址,可不配置
 loginUrl=http://43.254.55.177:8083/midland/rest/page/login
 #获取省市取接口
-webSite
+
 apiUrl = http://218.18.9.171:9009/dingjian/website/api/city/list?dataCenter=dataSource_szml&pageSize=2147483647
 areaUrl = http://218.18.9.171:9009/dingjian/website/api/area/list?dataCenter=dataSource_szml
 //经纪人列表接口
@@ -11,17 +16,21 @@ agentDetail=http://218.18.9.171:9009/dingjian/website/api/agenter/detail
 
 
 
-//房源类接口
-//新房0
-newhouse=http://218.18.9.171:9009/dingjian/website/api/newHouse/detail?dataCenter=dataSource_szml
-//二手房1
-second=http://218.18.9.171:9009/dingjian/website/api/secondHouse/sale/detail?dataCenter=dataSource_szml
 
-//2租房
-rent=http://218.18.9.171:9009/dingjian/website/api/secondHouse/rent/detail?dataCenter=dataSource_szml
-//3写字楼
-work=http://218.18.9.171:9009/dingjian/website/api/office/detail?dataCenter=dataSource_XXX
-//4商铺
-shop=http://218.18.9.171:9009/dingjian/website/api/shop/detail?dataCenter=dataSource_szml
-//5其它
-other=
+
+
+
+#//房源类接口
+#//新房0
+#newhouse=http://218.18.9.171:9009/dingjian/website/api/newHouse/detail?dataCenter=dataSource_szml
+#//二手房1
+#second=http://218.18.9.171:9009/dingjian/website/api/secondHouse/sale/detail?dataCenter=dataSource_szml
+#
+#//2租房
+#rent=http://218.18.9.171:9009/dingjian/website/api/secondHouse/rent/detail?dataCenter=dataSource_szml
+#//3写字楼
+#work=http://218.18.9.171:9009/dingjian/website/api/office/detail?dataCenter=dataSource_XXX
+#//4商铺
+#shop=http://218.18.9.171:9009/dingjian/website/api/shop/detail?dataCenter=dataSource_szml
+#//5其它
+#other=
