--- a/midland-bs-mannager/src/main/resources/properties/sftp.properties
+++ b/midland-bs-mannager/src/main/resources/properties/sftp.properties
@@ -3,5 +3,16 @@ sftp.host=43.254.55.177
 sftp.username=mysftp
 sftp.password=123456
 sftp.port=22
+sftp.privateKey
+#例:sftp的根目录是/usr/local/,配置了sftp.basePath=/upload,,,,,文件上传的目录就是/usr/local/upload/
+sftp.basePath=/upload
+#nginx 的配置
+img.domain=http://43.254.55.177:8083/newImg/
+
+
+#目录结果配置,,,,下面的可以不改
+file.path=file/
+video.path=video/
+img.path=img/
 
 
