--- a/midland-bs-mannager/src/main/resources/properties/appsetting.properties
+++ b/midland-bs-mannager/src/main/resources/properties/appsetting.properties
@@ -1,7 +1,7 @@
 #网站图片域名配置开始
 #imgdomain的配置规则:       imgdomain=ip:port/img/
 
-imgdomain=http://43.254.55.177:8083/img/
+imgdomain=http://43.254.55.177:8083/newImg/
 
 #注意事项 nginx要加 /img/ueditor的配置,如下
 #nginx 的端口对接 imgdomain 的端口
@@ -20,7 +20,7 @@ imgdomain=http://43.254.55.177:8083/img/
 
 
 #文件上传路径
-upload_dir=F:/img
+upload_dir=
 
 
 
