--- a/midland-bs-mannager/src/main/resources/properties/sftp.properties
+++ b/midland-bs-mannager/src/main/resources/properties/sftp.properties
@@ -1,12 +1,22 @@
 #邮箱配置
+#地址
 sftp.host=43.254.55.177
+#用户名
 sftp.username=mysftp
+#密码
 sftp.password=123456
+#端口
 sftp.port=22
+#密钥,可不配置
 sftp.privateKey
+
 #例:sftp的根目录是/usr/local/,配置了sftp.basePath=/upload,,,,,文件上传的目录就是/usr/local/upload/
 sftp.basePath=/upload
-#nginx 的配置
+#nginx 的配置,nginx的配置很关键
+#location /newImg/ {
+    #alias  /usr/local/upload/;
+#}
+
 img.domain=http://43.254.55.177:8083/newImg/
 
 
