--- a/midland-bs-mannager/src/main/resources/properties/sftp.properties
+++ b/midland-bs-mannager/src/main/resources/properties/sftp.properties
@@ -21,8 +21,11 @@ img.domain=http://43.254.55.177:8083/newImg/
 
 
 #目录结果配置,,,,下面的可以不改
+#图片上传路径 /usr/local/upload/file/
 file.path=file/
+#图片上传路径 /usr/local/upload/video/
 video.path=video/
+#图片上传路径 /usr/local/upload/img/
 img.path=img/
 
 
