--- a/midland-bs-mannager/src/main/resources/properties/sftp.properties
+++ b/midland-bs-mannager/src/main/resources/properties/sftp.properties
@@ -1,4 +1,4 @@
-#邮箱配置
+#sftp 配置
 #地址
 sftp.host=43.254.55.177
 #用户名
@@ -10,7 +10,7 @@ sftp.port=22
 #密钥,可不配置
 sftp.privateKey
 
-#例:sftp的根目录是/usr/local/,配置了sftp.basePath=/upload,,,,,文件上传的目录就是/usr/local/upload/
+#例:sftp的根目录是/usr/local/,配置了sftp.basePath=/upload,,,,,文件上传的目录就是/usr/local/upload/         (在sftp根目录上创建upload文件夹)
 sftp.basePath=/upload
 #nginx 的配置,nginx的配置很关键
 #location /newImg/ {
