--- a/midland-bs-mannager/src/main/resources/properties/dev/sftp.properties
+++ b/midland-bs-mannager/src/main/resources/properties/dev/sftp.properties
@@ -1,12 +1,12 @@
 #sftp服务配置
 #sftp服务地址
-sftp.host=160962aa.nat123.cc
+sftp.host=localhost
 #sftp用户名
 sftp.username=mysftp
 #sftp密码
 sftp.password=123456
 #sftp端口
-sftp.port=10937
+sftp.port=22
 #sftp私钥，，可不配置
 sftp.privateKey
 
