--- a/midland-bs-mannager/src/main/resources/properties/dev/application.properties
+++ b/midland-bs-mannager/src/main/resources/properties/dev/application.properties
@@ -1,11 +1,11 @@
 ﻿﻿﻿﻿# JDBC Global Setting
 #redis配置
-redis.host=160962aa.nat123.cc
-redis.port=10935
+redis.host=localhost
+redis.port=6379
 redis.pass=
 #mysql配置
 jdbc.driver=com.mysql.jdbc.Driver
-jdbc.url=jdbc:mysql://160962aa.nat123.cc:10933/midland?useUnicode=true&characterEncoding=utf-8&allowMultiQueries=true
+jdbc.url=jdbc:mysql://localhost:3306/midland?useUnicode=true&characterEncoding=utf-8&allowMultiQueries=true
 jdbc.username=root
 jdbc.password=123456
 
