set encoding to utf-8

--- a/midland-bs-mannager/src/main/resources/properties/sftp.properties
+++ b/midland-bs-mannager/src/main/resources/properties/sftp.properties
@@ -1,12 +1,12 @@
 #sftp服务配置
 #sftp服务地址
-sftp.host=160962aa.nat123.cc
+sftp.host=43.254.55.177
 #sftp用户名
 sftp.username=mysftp
 #sftp密码
 sftp.password=123456
 #sftp端口
-sftp.port=10937
+sftp.port=22
 #sftp私钥，，可不配置
 sftp.privateKey
 
@@ -17,7 +17,7 @@ sftp.basePath=/upload
 #          alias  /usr/local/upload/;
 #       }
 
-img.domain=http://xms3332932.nat123.net/newImg/
+img.domain=http://43.254.55.177:8083/newImg/
 
 
 
