--- a/midland-bs-mannager/src/main/resources/properties/samlSSO.properties
+++ b/midland-bs-mannager/src/main/resources/properties/samlSSO.properties
@@ -1,4 +1,4 @@
-siam_login_url=http://idm-siam-t.midlandmap.cn:8080/login
+siam_login_url=http://localhost:8080/rest/saml/saml_callback
 x509_location=siam.pem
 client_response_url=http://localhost:8081/samlDemo/saml2
 client_redirect_url=http://localhost:8081/samlDemo/saml2
