--- a/midland-bs-mannager/src/main/resources/properties/samlSSO.properties
+++ b/midland-bs-mannager/src/main/resources/properties/samlSSO.properties
@@ -1,4 +1,7 @@
 siam_login_url=http://localhost:8080/rest/saml/saml_callback
+#key文件的名称,,,key文件要放在resource目录下
 x509_location=siam.pem
+#本系统接收sso认证系统的回调地址
 client_response_url=http://localhost:8081/samlDemo/saml2
+#client_response_url和client_redirect_url通常是相同的
 client_redirect_url=http://localhost:8081/samlDemo/saml2
