禁止浏览器后退

--- a/midland-web-portal/src/main/resources/properties/midland.properties
+++ b/midland-web-portal/src/main/resources/properties/midland.properties
@@ -4,7 +4,7 @@ webSite=http://43.254.55.177:8083
 
 
 #后台登录地址,可不配置
-loginUrl=http://43.254.55.177:8083/midland/rest/page/login
+loginUrl=http://localhost:8080/thirdParty/contentIndex
 #获取省市取接口
 
 apiUrl = http://218.18.9.171:9009/dingjian/website/api/city/list?dataCenter=dataSource_szml&pageSize=2147483647
