禁止浏览器后退

--- a/midland-web-portal/src/main/resources/log4j.properties
+++ b/midland-web-portal/src/main/resources/log4j.properties
@@ -16,5 +16,5 @@ log4j.appender.File.MaxFileSize = 10MB
 log4j.appender.File.Threshold = ALL  
 log4j.appender.File.layout = org.apache.log4j.PatternLayout  
 log4j.appender.File.layout.ConversionPattern =[%p] [%d{yyyy-MM-dd HH\:mm\:ss}][%c]%m%n  
-org.apache.log4j.Level = debug
+org.apache.log4j.Level = info
 
