--- a/midland-bs-mannager/src/main/resources/properties/prod/midland.properties
+++ b/midland-bs-mannager/src/main/resources/properties/prod/midland.properties
@@ -1,10 +1,10 @@
 
-#前端网站地址配置(第三方登录验证成功后,后台跳转到前端登录页面)
-webSite=http://43.254.55.177:8083
+#前端网站地址配置(第三方登录验证成功后,后台跳转到前端登录页面),可不配置
+webSite=
 
 
 #后台登录地址,可不配置
-loginUrl=http://43.254.55.177:8083/midland/rest/page/login
+loginUrl=
 #获取省市取接口
 
 apiUrl = http://218.18.9.171:9009/dingjian/website/api/city/list?dataCenter=dataSource_szml&pageSize=2147483647
