--- a/midland-bs-mannager/src/main/resources/properties/staging/midland.properties
+++ b/midland-bs-mannager/src/main/resources/properties/staging/midland.properties
@@ -1,10 +1,10 @@
 
-#前端网站地址配置(第三方登录验证成功后,后台跳转到前端登录页面)
-webSite=http://web2-s.midlandmap.cn
+#前端网站地址配置(第三方登录验证成功后,后台跳转到前端登录页面),可不配置
+webSite=
 
 
 #后台登录地址,可不配置
-loginUrl=http://web2-s.midlandmap.cn/midland/rest/page/login
+loginUrl=
 #获取省市取接口
 
 apiUrl = http://djweb2-api.midlandmap.cn:9009/dingjian/website/api/city/list?dataCenter=dataSource_szml&pageSize=2147483647
