--- a/midland-web-portal/src/main/resources/properties/dev/midland.properties
+++ b/midland-web-portal/src/main/resources/properties/dev/midland.properties
@@ -1,6 +1,6 @@
 
 #前端网站地址配置(第三方登录验证成功后,后台跳转到前端登录页面)
-webSite=http://43.254.55.177:8088/thirdParyLogin
+webSite=http://node:8088/thirdParyLogin
 
 
 #后台登录地址,可不配置
