--- a/midland-web-portal/src/main/resources/properties/dev/sftp.properties
+++ b/midland-web-portal/src/main/resources/properties/dev/sftp.properties
@@ -1,6 +1,6 @@
 #sftp服务配置
 #sftp服务地址
-sftp.host=localhost
+sftp.host=sftp
 #sftp用户名
 sftp.username=mysftp
 #sftp密码
@@ -17,7 +17,7 @@ sftp.basePath=/upload
 #          alias  /usr/local/upload/;
 #       }
 
-img.domain=http://xms3332932.nat123.net/newImg/
+img.domain=http://3332932.nat123.net:11873/newImg/
 
 
 
